[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/handler/AudioHandler.gd" type="Script" id=1]
[ext_resource path="res://scripts/file_io/AudioLoader.gd" type="Script" id=2]

[node name="AudioHandler" type="Node"]
pause_mode = 2
script = ExtResource( 1 )

[node name="AudioLoader" type="Node" parent="."]
script = ExtResource( 2 )

[node name="SoundsPlayer" type="AudioStreamPlayer" parent="."]
bus = "Sounds"

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
bus = "Music"

[node name="AmbientPlayer" type="AudioStreamPlayer" parent="."]
bus = "Ambient"

[connection signal="finished" from="MusicPlayer" to="." method="_on_MusicPlayer_finished"]
